# yellow_belt_CPP

./: CMakeLists.txt  README.md  condition_parser.h  condition_parser_test.cpp  database.cpp  database.h  date.cpp  date.h  main.cpp  node.cpp  node.h  test_runner.h  token.cpp  token.h
definition/: phone_number.cpp  sum_reverse_sort.cpp
headers/: Animal.h  Figures.h  Matrix.h  Notification.h  Parser.h  PersonFour.h  Region.h  Solutions.h  TaskTracker.h  bus_stops.h  date.h  distinct_root_number.h  person_refactoring.h  personal_budget.h  personal_budjet.h  persons_median_values.h  phone_number.h  rectangle.h  sqr.h  sum_reverse_sort.h  teamplate_outputs.h  test_framework.h  test_is_palindom.h  test_person.h  test_rational.h
task_refactoring/: bus_manager.cpp  bus_manager.h  main.cpp  query.cpp  query.h  responses.cpp  responses.h
